Fixing the dropshadow on mobile index

--- a/sections-styles/index-nav.css
+++ b/sections-styles/index-nav.css
@@ -9,7 +9,7 @@
     color: var(--accent-turquoise);
     border-radius: var(--br-10px);
 
-    box-shadow: 0px 0px 4px 8px rgba(255, 255, 255, 0.18);
+    box-shadow: 0px 0px 2px 4px rgba(255, 255, 255, 0.10);
 
 }
 
